@@ -1,0 +1,2 @@
+top_builddir=..
+DOMAIN=apport
